<resources>
    <string name="app_name">SenseME Effects</string>
    <string name="video_effect">视频特效</string>
    <string name="image_effect">图片特效</string>
    <string name="cpu_filter">CPU滤镜</string>
    <string name="powered_by">Powered by SenseTime v4.5.3</string>

    <!--interaction tabs-->
    <string name="two_dimention">2D</string>
    <string name="three_dimention">3D</string>
    <string name="switch_face">换脸</string>
    <string name="haha_mirror">哈哈镜</string>
    <string name="resolution_smaller">640*480</string>
    <string name="resolution_bigger">1280*720</string>
    <string name="frame_radio">单帧耗时：</string>
    <string name="cpu_radio">CPU占用率：</string>
    <string name="saving_image">图片保存中...</string>

    <string name="mode_1973">1973</string>
    <string name="mode_clarendon">Clarendon</string>
    <string name="mode_process">Process</string>
    <string name="mode_rise">Rise</string>
    <string name="mode_sepia">Sepia</string>
    <string name="mode_silver">Silver</string>
    <string name="mode_tender">Tender</string>
    <string name="mode_vintage">Vintage</string>
    <string name="mode_vivid">Vivid</string>
    <string name="mode_warm">Warm</string>
    <string name="mode_c1">C1</string>
    <string name="mode_curve">Curve</string>
    <string name="mode_elegant">Elegant</string>
    <string name="mode_glow">Glow</string>
    <string name="mode_kelvin">Kelvin</string>
    <string name="mode_lark">Lark</string>
    <string name="mode_nashville">Nashville</string>
    <string name="mode_pink">Pink</string>
    <string name="mode_sunlight">Sunlight</string>
    <string name="mode_close">Close</string>
    <string name="mode_original">Original</string>
    <string name="mode_779">779</string>
    <string name="mode_1977">1977</string>
    <string name="mode_aden">Aden</string>
    <string name="mode_brennan">Brennan</string>
    <string name="mode_brooklyn">Brooklyn</string>
    <string name="mode_charmes">Charmes</string>
    <string name="mode_danube">Danube</string>
    <string name="mode_daydreamblue">DayDreamBlue</string>
    <string name="mode_gothic">Gothic</string>
    <string name="mode_grace">Grace</string>
    <string name="mode_halo3">Halo3</string>
    <string name="mode_lofi">Lofi</string>
    <string name="mode_m3">M3</string>
    <string name="mode_m5">M5</string>
    <string name="mode_midday">Midday</string>
    <string name="mode_nostalgia1">Nostalgia1</string>
    <string name="mode_nostalgia8">Nostalgia8</string>
    <string name="mode_p5">P5</string>
    <string name="mode_pixar">Pixar</string>
    <string name="mode_seep">Seep</string>
    <string name="mode_sepia2">Sepia2</string>
    <string name="mode_sofina">Sofina</string>
    <string name="mode_sx70">Sx70</string>
    <string name="mode_t1">T1</string>
    <string name="mode_ueno">Ueno</string>
    <string name="mode_warm2">Warm2</string>
    <string name="mode_waterfall">Waterfall</string>
    <string name="mode_f2">F2</string>
    <string name="mode_c7">C7</string>
    <string name="mode_a6">A6</string>
    <string name="mode_hb1">HB1</string>
    <string name="mode_b5">B5</string>
    <string name="mode_se">Se</string>
    <string name="mode_hs">Hs</string>
    <string name="mode_al">Al</string>
    <string name="mode_ar">Ar</string>
    <string name="mode_cr">Cr</string>
    <string name="mode_chaplin">Chaplin</string>
    <string name="mode_elysees">Elysees</string>
    <string name="mode_forest">Forest</string>
    <string name="mode_fortune">Fortune</string>
    <string name="mode_izu">Izu</string>
    <string name="mode_le">Le</string>
    <string name="mode_macbeth">Macbeth</string>
    <string name="mode_manhattan">Manhattan</string>
    <string name="mode_margaret">Margaret</string>
    <string name="mode_moderntime">ModernTime</string>
    <string name="mode_morispirit">Morispirit</string>
    <string name="mode_sunset">Sunset</string>
    <string name="mode_troy">Troy</string>
    <string name="mode_wallstreet">Wallstreet</string>
    <string name="mode_wf">WF</string>
    <string name="mode_oldphoto">Oldphoto</string>
    <string name="mode_elegance">Elegance</string>
    <string name="mode_star">Star</string>
    <string name="mode_babypink">Babypink</string>
    <string name="mode_bright">Bright</string>
    <string name="mode_cherry">Cherry</string>
    <string name="mode_city">City</string>
    <string name="mode_hotwind">Hotwind</string>

    <string name="mode_lovely">Lovely</string>
    <string name="mode_modern">Modern</string>
    <string name="mode_OL">OL</string>
    <string name="mode_pansy">Pansy</string>
    <string name="mode_peach">Peach</string>

    <string name="mode_pretty">Pretty</string>
    <string name="mode_purefresh">Purefresh</string>
    <string name="mode_ruby">Ruby</string>
    <string name="mode_sakura">Sakura</string>
    <string name="mode_scarlet">Scarlet</string>
    <string name="mode_sunny">Sunny</string>

    <string name="title_activity_cpu_filter">CpuFilterActivity</string>

</resources>
