<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/close"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:id="@+id/tv_capture"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:background="@drawable/save"
        android:layout_marginTop="23dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/tv_change_camera"
        android:layout_width="25dp"
        android:layout_height="20dp"
        android:background="@drawable/change_camera"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:visibility="invisible"
        android:layout_below="@+id/tv_capture"
        android:layout_alignParentRight="true"/>

    <LinearLayout
        android:id="@+id/layout_resolution"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_preview_size"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/tv_smaller_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_left_corner_unpressed"
            android:text="@string/resolution_smaller"
            android:textSize="@dimen/layout_resolution_font_size"
            android:textColor="@color/white"
            android:padding="@dimen/layout_resolution_padding"/>

        <TextView
            android:id="@+id/tv_bigger_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_right_corner_unpressed"
            android:text="@string/resolution_bigger"
            android:textSize="@dimen/layout_resolution_font_size"
            android:textColor="@color/white"
            android:padding="@dimen/layout_resolution_padding"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_face_attribute"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@id/layout_resolution"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="#00000000"
        android:text=""
        android:textSize="@dimen/layout_resolution_font_size"
        android:textColor="@color/white"
        android:padding="@dimen/layout_resolution_padding"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tv_cancel"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frame_radio"
                android:textColor="@color/white"
                android:textSize="@dimen/layout_resolution_font_size"/>
            <TextView
                android:id="@+id/tv_frame_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5ms"
                android:textColor="@color/white"
                android:textSize="@dimen/layout_resolution_font_size"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_cpu_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cpu_radio"
                android:textColor="@color/white"
                android:textSize="@dimen/layout_resolution_font_size"/>
            <TextView
                android:id="@+id/tv_cpu_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="23%"
                android:textColor="@color/white"
                android:textSize="@dimen/layout_resolution_font_size"/>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/tv_layout_tips"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="#00000000"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/iv_image_tips"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_text_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="20dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_saving_image"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:textSize="@dimen/layout_radio_button_font_size"
        android:text="@string/saving_image"
        android:gravity="center"
        android:background="@color/red"
        android:visibility="gone"/>

    <!-- <TextView
        android:id="@+id/tv_filter"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/beautify_on"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/tv_attribute"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/tv_attribute"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/attribute_off"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/tv_beautify"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/tv_beautify"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/beautify_on"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/rv_stickers"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/tv_sticker"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/beautify_on"
        android:layout_alignParentRight="true"
        android:layout_above="@id/tv_filter"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        />-->



    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_stickers"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:scrollbars="none"
        android:visibility="invisible"
        android:padding="5dp"
        android:background="@color/black"
        android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:id="@+id/ll_filter_strength"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:visibility="invisible"
        android:layout_above="@id/rv_stickers">
        <SeekBar
            android:id="@+id/sb_filter_strength"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxHeight="4dp"
            android:minHeight="4dp"
            android:progressDrawable="@drawable/player_setting_bright_progressbar"
            android:thumb="@drawable/player_settings_bright_thumb"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="4"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_sticker_layout_swicth"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/st_close"
        android:layout_alignParentRight="true"
        android:layout_above="@id/ll_filter_strength"
        android:visibility="invisible"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:id="@+id/layout_beauty_swicth"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#80000000"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tv_beautify_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="关闭美颜"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_beautify_open"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="开启美颜"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list_beautify_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:footerDividersEnabled="false"
        android:divider="#00000000"
        android:dividerHeight="0dip"
        android:headerDividersEnabled="false"
        android:scrollbars="none"
        android:visibility="invisible"
        android:padding="5dp"
        android:layout_above="@id/layout_beauty_swicth"
        android:background="@color/black"/>

    <TextView
        android:id="@+id/tv_beautify_layout_swicth"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/st_close"
        android:layout_alignParentRight="true"
        android:layout_above="@id/list_beautify_options"
        android:visibility="invisible"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        />





    <LinearLayout
        android:id="@+id/layout_attribute_swicth"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#80000000"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tv_attribute_close"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="关闭属性"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_attribute_open"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="开启属性"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_attribute_layout_swicth"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:background="@drawable/st_close"
        android:layout_alignParentRight="true"
        android:layout_above="@id/layout_attribute_swicth"
        android:visibility="invisible"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:id="@+id/layout_options"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <sensetime.senseme.com.effects.HorizontalListView
            android:id="@+id/listview"
            android:layout_width="wrap_content"
            android:gravity="bottom"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:id="@+id/ll_attribute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/iv_attribute"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="4dp"
                android:src="@drawable/st_face_attribute"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="属性"
                android:textColor="@android:color/white"
                android:textSize="12dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_beauty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_beauty"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="4dp"
                android:src="@drawable/st_face_beauty"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="美颜"
                android:textColor="@android:color/white"
                android:textSize="12dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sticker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/iv_sticker"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="4dp"
                android:src="@drawable/st_sticker"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="贴纸"
                android:textColor="@android:color/white"
                android:textSize="12dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/iv_filter"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="4dp"
                android:src="@drawable/st_filter"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="滤镜"
                android:textColor="@android:color/white"
                android:textSize="12dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_object"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/iv_object"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="4dp"
                android:src="@drawable/object_track"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="物体追踪"
                android:textColor="@android:color/white"
                android:textSize="12dp"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/tv_show_origin"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:background="@drawable/show_origin"
        android:layout_alignParentRight="true"
        android:layout_above="@id/layout_options"
        android:visibility="invisible"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp" />

</merge>